--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# EXCEPCIONES PARA BACKUPS DE BASES DE DATOS
+!DB_Backups/
+!DB_Backups/*.bak
